--- a/S2_P2_AN2_AS1.tex
+++ b/S2_P2_AN2_AS1.tex
@@ -32,9 +32,9 @@ Let $z(t) = (1-t) \vec x + t \vec y$.
           $$
               \varepsilon < \frac{\varepsilon_0}{\norm{\vec x - \vec y}}
           $$
-          then $B(z(\tmin - \varepsilon), \varepsilon_0 - \varepsilon) \subseteq B(z(\tmin), \varepsilon_0) \subseteq E$
+          then $z(\tmin - \varepsilon) \in B(z(\tmin), \varepsilon_0) \subseteq E$, that is $z(\tmin - \varepsilon) \in E$.
 
-    \item We encountered a contradiction: the fact that $z(\tmin - \epsilon) \in E$ contradicts the fact that $\tmin$ is an infimum.
+    \item We encountered a contradiction: the fact that $z(\tmin - \varepsilon) \in E$ contradicts the fact that $\tmin$ is an infimum.
 \end{enumerate}
 
 \subsection*{Problem 5}
