--- a/S2_P2_PROB.tex
+++ b/S2_P2_PROB.tex
@@ -15,6 +15,7 @@
 \newcommand{\Exponential}{{\operatorfont Exponential}}
 \newcommand{\BivariateNormal}{{\operatorfont BivariateNormal}}
 
+\renewcommand{\vec}[1]{\underline{\mathbf{#1}}}
 
 \begin{document}
 
@@ -735,7 +736,7 @@ It has two parameters $a, b \gt 0$.
 Note that if $a = b = 1$ then the pdf becomes the pdf of the uniform distribution (see \autoref{eq:uniform:pdf}).
 In other words, the uniform distribution on $[0, 1]$ is a special case of the beta distribution.
 
-\section{Joint continuous distributions}
+\section{Joint continuous random variables}
 
 \subsection{Definition}
 
@@ -877,7 +878,7 @@ It can be proven that $X \indep Y$ iff the joint pdf can be written as
     Let $X, Y$ be square-integrable random variables.
     The covariance of $X$ and $Y$ is defined as
     \begin{equation}
-        \cov(X, Y) = E((C - \mu_X)(Y- \mu_Y))
+        \cov(X, Y) = E((X - \mu_X)(Y - \mu_Y))
     \end{equation}
 \end{definition}
 
@@ -1012,6 +1013,7 @@ and we can calculate the conditional cdf of $Y$ given $X = x$ as
 \end{definition}
 
 \begin{theorem}[properties of conditional expectation]
+    \label{thm:condition:prop_expectation}
     \begin{align}
          & E(E(Y|X)) = E(Y) \label{eq:joint:expectation_1}         \\
          & E(g(X)E(Y|X)) = E(g(X)Y) \label{eq:joint:expectation_2}
@@ -1128,9 +1130,139 @@ we have to choose $W$ in such a way that helps us do the calculations.
 \end{theorem}
 
 \begin{proof}
-    TODO: formalize this.
-
     We get this result by applying what we wrote above where $Z = X + Y$ and $W = X$
+
+    TODO: formalize this.
+\end{proof}
+
+% Class of 17/04/2024
+\subsection{Mixing continuous and discrete}
+
+Consider the case in which we know $f_X(x)$ and $f_{Y|X}(y|x)$.
+Then we can write the joint probability as
+\begin{equation}
+    P(X\in A, Y \in B) = \int_A f_X(x) \left[\int_B f_{Y|X}(y|x) \dd{y} \right] \dd{x} = \int_A f_X(x) P(Y\in B| X = x)
+\end{equation}
+just by applying the definition of conditioning and Fubini's theorem.
+
+Applying the same reasoning we can get that this result holds even in the case of a general surface $C$, therefore
+\begin{equation}
+    P((X, Y) \in C) = \int P(Y \in C_x | X = x) f_X(x) \dd{x}
+\end{equation}
+where $P(Y \in C_x | X = x) = P((X, Y) \in C | X = x)$.
+
+This holds even if $Y|X = x$ is discrete and $X$ is continuous (\autoref{eq:mixing:x_cont}), or if $X$ is discrete and $Y|X = x$ is continuous (\autoref{eq:mixing:x_disc}).
+\begin{align}
+    P(X \in A, Y \in B) & = \int_A \left[\sum_{y \in B} f_{Y | X}(y| x)\right] f_X(x) \dd{x} \label{eq:mixing:x_cont} \\
+    P(X \in A, Y \in B) & = \sum_{x \in A} \left[ \int_B f_{Y|X}(y|x) \dd{y} \right] f_X(x) \label{eq:mixing:x_disc}
+\end{align}
+
+Moreover, the proprieties of the conditional expectation (\autoref{thm:condition:prop_expectation}) are still valid in both cases.
+
+\subsection{Generalizing}
+
+We define a random vector as $\vec X =
+    \begin{bmatrix}
+        X_1    \\
+        \vdots \\
+        X_k
+    \end{bmatrix}$
+and $f_{\vec X}(\vec x)$ its pdf.
+This notation is valid for discrete and continuous random variables.
+
+To calculate the probability $P(\vec X \in A)$ we use the usual definition for the discrete case while in the continuous case we just stack $k$ integrals one inside the other:
+\begin{equation}
+    P(\vec X \in A = \idotsint f_{\vec X}(x_1, \ldots, x_k) \dd{x_1} \ldots \dd{x_k}
+\end{equation}
+
+The joint cdf will be
+\begin{equation}
+    F_{\vec X}(\vec x) = P(X_1 \leq x_1, \ldots X_k \leq x_k)
+\end{equation}
+and independence will be
+\begin{equation}
+    f_{\vec X} = \prod_{i = 1}^{k} f_{X_i}(x_i)
+\end{equation}
+
+The expectation vector is defined as
+\begin{equation}
+    E(X) = \begin{bmatrix}
+        E(X_1) \\
+        \vdots \\
+        E(X_k)
+    \end{bmatrix} = \vec \mu
+\end{equation}
+
+The variance is a matrix defined as
+\begin{equation}
+    V(\vec X) = \begin{bmatrix}
+        V(X_1)         & \cov(X_1, X_2) & \dots  & \cov(X_1, X_k) \\
+        \cov(X_2, X_1) & V(X_2)         &        & \vdots         \\
+        \vdots         &                & \ddots &                \\
+        \cov(X_k, X_1) & \dots          &        & V(X_k)
+    \end{bmatrix} = \Sigma
+\end{equation}
+which is sometimes called the covariance matrix, as it contains all the covariance (recall that $\cov(X_i, X_i)= V(X_i)$).
+Also note that $\Sigma$ is symmetric.
+
+We can also arrange random variables in a matrix, giving us a random matrix.
+Its expectation is
+\begin{equation}
+    E\left(\begin{bmatrix}
+        X_{11} & \dots  & X_{1n} \\
+        \vdots & \ddots & \vdots \\
+        X_{k1} & \dots  & X{kn}
+    \end{bmatrix}\right) =
+    \begin{bmatrix}
+        E(X_{11}) & \dots  & E(X_{1n}) \\
+        \vdots    & \ddots & \vdots    \\
+        E(X_{k1}) & \dots  & E(X{kn})
+    \end{bmatrix}
+\end{equation}
+
+\begin{proposition}[variance matrix]
+    \label{prop:gen:variance_mat}
+    Let $\vec X =
+        \begin{bmatrix}
+            X_1    \\
+            \vdots \\
+            X_k
+        \end{bmatrix}$ and $\vec \mu = E(\vec X)$.
+    Then
+    \begin{equation}
+        V(\vec X) = E \left( \left(\vec X - \vec \mu\right) \left(\vec X - \vec \mu\right)^T \right)
+    \end{equation}
+\end{proposition}
+
+\begin{proof}
+    This just comes from the fact that $E((X_i - \mu_i)(X_j - \mu_j)) = \cov(X_i, X_j)$ (\autoref{def:joint:covariance}).
+    Then each element of the resulting matrix is the covariance of $X_i, X_j$.
+\end{proof}
+
+\begin{theorem}[linearity of expectation matrix]
+    Let $\vec X$ be a random matrix and $A, B$ be matrices of numbers.
+    Then
+    \begin{equation}
+        E(A \vec X + B) = A E(\vec X) + B
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    This is immediate from iterating the linearity of expectation on the values of the matrix.
+    (Actually there's a bit more to it but you can read it on the book.)
+\end{proof}
+
+\begin{theorem}[proprieties of variance]
+    Let $\vec X$ be a random vector, $A$ be a matrix, and $\vec b$ be a vector.
+    Then
+    \begin{align}
+        V(\vec X)            & = E(\vec X \vec X^T) - \vec \mu \vec \mu^T \\
+        V(A \vec X + \vec b) & = A V(\vec X) A^T
+    \end{align}
+\end{theorem}
+
+\begin{proof}
+    These properties both come from expanding \autoref{prop:gen:variance_mat} and performing some linear algebra properties such as $(AB)^T = B^T A^T$.
+    I will not write the full proof here, check the book.
 \end{proof}
 
 \end{document}
